Fixing overwritten font-family to be same as WordPress menu link.

--- a/ckanext/cioos_theme/public/cioos_atlantic.scss
+++ b/ckanext/cioos_theme/public/cioos_atlantic.scss
@@ -64,6 +64,8 @@ $atlantic-secondary: #e55162;
             }
             a {
                 color: $text-dark !important;
+                font-family: "Montserrat", sans-serif;
+                font-size: 15px;
             }
         }
     }
