--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -2,22 +2,22 @@
   <div class="container">
     <div class="row row1">
       <div class="col-md-12 col1 centertext title module-content-end">
-        <h1>{{ _('<span>CIOOS</span> Data Catalogue') }}</h1>
+        <h1><span>{{ _('CIOOS') }}</span> {{ _('Data Catalogue') }}</h1>
         <h2>{{ _('Search, find, download — all of our') }} <span><a href="{{ h.url_for(controller='package', action='search') }}">{{h.cioos_count_datasets()}}</a></span> {{ _('datasets') }}.</h2>
         <!-- old block -->
         {# block promoted #}
         {# snippet 'home/snippets/promoted.html' #}
         {# endblock #}
       </div>
-      <div class="col-md-12 col1 module-content-end">
+      <div class="col-md-12 col1 module-content-end cioos-module-search">
         {% block search %}
         {% snippet 'home/snippets/search.html' %}
         {% endblock %}
       </div>
       <div class="col-md-12 col1 module-content-end">
+        <h3 class="heading">{{ _('Search By Ocean Variable:') }}</h3>
         <div class="module-content box">
           {% block eov_list %}
-          <h3 class="heading">{{ _('SEARCH BY OCEAN VARIABLE') }}</h3>
           {% set eov = h.cioos_get_eovs(show_all=True) %}
           {% for grouper, list in eov|groupby('category') %}
           {% if grouper and grouper not in g.exclude_eov_category %}
