--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1113,6 +1113,7 @@ div.search-input-group {
        width: 100%
      }
 
-  }
+}
 
-  @import url(//fonts.googleapis.com/css?family=Quicksand:300,400,600,700|);
+@import url(//fonts.googleapis.com/css?family=Quicksand:300,400,600,700|);
+@import 'cioos_atlantic.scss';
