initial commit to add wordpress footer to ckan

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -146,20 +146,20 @@ $teenwidth: 100%;
   background-repeat: no-repeat;
   background-position: 111%;
   color: #fff;
-  padding: 10px;
+  padding: 55px 10px 30px;
 }
 
 /* The text in the footer. */
-#footer,
-#footer label,
-#footer small {
-  color: rgba(0, 0, 0, 0.6);
-}
+//#footer,
+//#footer label,
+//#footer small {
+//  color: rgba(0, 0, 0, 0.6);
+//}
 
 /* The link texts in the footer. */
-#footer a {
-  color: rgba(0, 0, 0, 0.6);
-}
+//#footer a {
+//  color: rgba(0, 0, 0, 0.6);
+//}
 
 
 body {
