--- a/ckanext/cioos_theme/templates/footer.html
+++ b/ckanext/cioos_theme/templates/footer.html
@@ -1,4 +1,4 @@
-<div id="footer">
+{# <div id="footer">
   <div class="container">
     <div class="col-md-6 col1">
       <a href="mailto:info@cioos.ca" title="{{ _('CONTACT US') }}">{{ _('CONTACT US') }}</a>
@@ -8,6 +8,83 @@
     </div>
   </div>
 </div>
+#}
+
+<footer>
+	<div id="footer">
+		<div id="footer-core" class="option15 container">
+			<div id="footer-col1" class="widget-area one_sixth col-sm-3 col-md-3 col-lg-3 col1">
+				<aside class="widget widget_text">
+					<h3 class="footer-widget-title">
+						<span>CONTACT US</span>
+					</h3>
+					<div class="textwidget">
+						<p>
+							<a href="mailto:info@cioospacific.ca">info@cioospacific.ca</a>
+						</p>
+					</div>
+				</aside>
+			</div>
+			<div id="footer-col2" class="widget-area one_third col-sm-4 col-md-4 col-lg-4 col1">
+				<aside class="widget widget_text">
+					<h3 class="footer-widget-title">
+						<span>CIOOS</span>
+					</h3>
+					<div class="textwidget">
+						<div id="footer-col2" class="widget-area one_sixth last one_third">
+							<aside class="widget_text widget widget_custom_html">
+								<div>
+									<a href="https://www.cioos.ca/">CIOOS National</a>
+								</div>
+								<div class="textwidget custom-html-widget">
+									<a href="#">Pacific Region</a>
+									<br>
+									<a href="https://new.ogsl.ca/en/home/">St. Lawrence Region</a>
+									<br>
+									<a href="https://cioosatlantic.ca/">Atlantic Region</a>
+								</div>
+							</aside>
+						</div>
+					</div>
+				</aside>
+			</div>
+			<div id="footer-col3" class="widget-area last one_half col-sm-5 col-md-5 col-lg-5 col1">
+				<aside class="widget_text widget widget_custom_html">
+					<h3 class="footer-widget-title">
+						<span>SUBSCRIBE TO CIOOS VIA EMAIL</span>
+					</h3>
+					<div class="textwidget custom-html-widget">
+						<div id="mc_embed_signup">
+							<form action="https://cioos.us4.list-manage.com/subscribe/post?u=878a48e5216df1dd94addb795&amp;id=a3c7b19b1e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+								<div id="mc_embed_signup_scroll">
+									<div id="mce-responses" class="clear">
+										<div class="response" id="mce-error-response" style="display:none"></div>
+										<div class="response" id="mce-success-response" style="display:none"></div>
+									</div>
+									<div class="subcribe_container">
+										<div style="position: absolute; left: -5000px;" aria-hidden="true">
+											<input type="text" name="b_bbfb1b3442ef6556f2c6cdfff_da0cc8ed40" tabindex="-1" value="">
+										</div>
+										<div class="mc-field-group email">
+											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
+										</div>
+										<div class="clear">
+											<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe">
+										</div>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</aside>
+			</div>
+		</div>
+	</div>
+	<!-- #footer -->
+</footer>
+
+
+
 {% block header_account %}
 <header class="account-masthead">
   <div class="container">
