update footer to more closely match Wordpress site. heavily based on current cioos pacific styles.

--- a/ckanext/cioos_theme/templates/base.html
+++ b/ckanext/cioos_theme/templates/base.html
@@ -32,7 +32,7 @@
     {%- block styles %}
       {% resource g.main_css[6:] %}
       <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
-      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400&display=swap" rel="stylesheet">
     {% endblock %}
 
     {% block head_extras %}
