--- a/ckanext/cioos_theme/templates/footer.html
+++ b/ckanext/cioos_theme/templates/footer.html
@@ -31,7 +31,7 @@
 						<span>CIOOS</span>
 					</h3>
 					<div class="textwidget">
-						<div id="footer-col2" class="widget-area one_sixth last one_third">
+						<div class="widget-area one_sixth one_third">
 							<aside class="widget_text widget widget_custom_html">
 								<div>
 									<a href="https://www.cioos.ca/">CIOOS National</a>
@@ -82,7 +82,7 @@
 	</div>
 	<!-- #footer -->
 </footer>
-
+<a id="scrollUp" href="#top" style="position: fixed; z-index: 2147483647; display: block;"></a>
 
 
 {% block header_account %}
