--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -948,7 +948,7 @@ div.search-input-group {
     #header-search {
       display: table-cell;
       vertical-align: middle;
-      padding: 4em 1em 0 1em;
+      padding: 4em 0 0 1em;
     }
 
 
@@ -987,7 +987,10 @@ div.search-input-group {
       font-size: 13px;
       color: #bebebe;
       padding: 0 0 1em 0;
-      margin: 0 2em 0 0;
+    }
+
+    #header .header-links>ul>li:not(.last){
+      margin: 0 2.3em 0 0;
     }
 
     #header .menu>li>a {
@@ -1005,7 +1008,7 @@ div.search-input-group {
       font-weight: normal;
       display: inline-block;
       margin: -2px 0 0 6px;
-      vertical-align: top;
+      vertical-align: baseline;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       transform: rotate(0);
@@ -1093,10 +1096,13 @@ div.search-input-group {
     #header .header-links>ul>li a {
       text-decoration: none;
       color: #0a0a0a;
-      font-family: Quicksand;
+      //font-family: Quicksand;
+      font-family: inherit;
       font-weight: 400;
       font-size: 14px;
       font-style: normal;
+      line-height: 2em;
+      height: 2em;
     }
 
     #header .menu>li>a::after {
