update body font-family

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -164,7 +164,8 @@ $teenwidth: 100%;
 
 body {
   background: #ffffff;
-  font-family: 'Montserrat', sans-serif;
+  //font-family: 'Montserrat', sans-serif;
+  font-family: Raleway, Helvetica, Arial;
 }
 
 #topmenu {
