--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -11,9 +11,9 @@
 
 {# import macros from ra header file #}
 {% if self._TemplateReference__context.name != g.header_file_name %}
-  {% from '%s' % g.header_file_name or 'header_wp.html' import include_site_header, include_mobile_header with context %}
+  {% from '%s' % g.header_file_name or 'header_wp.html' import include_site_header, include_mobile_header, include_site_social with context %}
 {% else %}
-  {% from 'header_wp.html' import include_site_header, include_mobile_header with context %}
+  {% from 'header_wp.html' import include_site_header, include_mobile_header, include_site_social with context %}
 {% endif %}
 
 <div id="header-container">
@@ -42,7 +42,7 @@
     <div class="container">
       <nav>
         <ul>
-          <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
+          {{ include_site_social() }}
           <li>
             {%- if h.lang() == 'en' -%}
               <a href="{% url_for h.current_url(), locale='fr' %}" tabindex="0" aria-label="French/English">FR</a>
