--- a/ckanext/cioos_theme/templates/pacific_header.html
+++ b/ckanext/cioos_theme/templates/pacific_header.html
@@ -26,6 +26,7 @@
         </ul>
       </li>
       <ul class="shareicons">
+        <li><a href="https://www.facebook.com/CIOOSPacific/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook"></i></a></li>
         <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
         <li>
           {%- if h.lang() == 'en' -%}
@@ -68,5 +69,12 @@
       </ul>
     </li>
   </ul>
+  {% endblock %}
+{% endmacro %}
+
+{% macro include_site_social() %}
+  {% block header_social_list %}
+    <li><a href="https://www.facebook.com/CIOOSPacific/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
   {% endblock %}
 {% endmacro %}
