--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1,28 +1,9 @@
-// $bodyfont: "adobe-garamond-pro",
-// "Georgia",
-// serif; //bodyfont
 $defaultfont: Raleway, Helvetica, Arial;
 $headlinefont: "Quicksand", "nimbus-sans", "Arial", sans-serif; //headlines, captions and infoboxes
-// $headerfont: "fira-sans", "Arial", sans-serif; //Site header slogan
 $darkestblack: rgba(73, 73, 72, 1); //the darkest black used for font color and body copy
-// $maincolor: rgba(30, 93, 111, 1); //Header color - behind the logo - #205f71;
 $lighttextcolor: lighten($darkestblack, 95%); //white text #ffffff
-// $specialseries: rgba(190, 228, 234, 1);
 $navbg: #52a79b; //Dark blue, behind nav area, behind share logos #1c4552
-// $navbghover: $maincolor; //Used in pagination hover
-// $hakaigrey: rgba(149, 149, 145, 1); //Used in Author color, share button BG, single page #BBB
-// $hakaigreylight: rgba(243, 241, 237, 1); //Used in correction backgrounds and audio edition BG
-// $body_link_color: rgba(79, 170, 189, 1); //Colour of text links in body copy
-// $body_link_hover_color: $maincolor; //Colour of text link
-// $rotatingheaderselectbg: rgba(0, 0, 0, 1);
-// $captionlink: lighten($navbg, 50%);
-// $captionlinkcolor: lighten($navbghover, 40%);
-//
-//
-// //Layout
-// $number_of_columns:4;
-// $master_margin_width: 30px;
-// $singlepagecontainer: 600px;
+
 //Fullscreen
 $papabreak: 1140px;
 $papawidth: 1140px;
@@ -121,30 +102,9 @@ $teenwidth: 100%;
 .nav-tabs > li > a {
   color: black;
 }
-/* ====================================
-   The footer at the bottom of the site
-   ==================================== */
-#footer {
-  background-color: $navbg;
-  background-repeat: no-repeat;
-  background-position: 111%;
-  color: #fff;
-  padding: 55px 10px 30px;
-}
-/* The text in the footer. */
-//#footer,
-//#footer label,
-//#footer small {
-//  color: rgba(0, 0, 0, 0.6);
-//}
-/* The link texts in the footer. */
-//#footer a {
-//  color: rgba(0, 0, 0, 0.6);
-//}
 
 body {
   background: #ffffff;
-  //font-family: 'Montserrat', sans-serif;
   font-family: $defaultfont;
 }
 
@@ -163,11 +123,12 @@ body {
 #topmenu li {
   float: right;
   display: block;
-  margin: 0 0 0 35px;
-  padding: 0;
+  //margin: 0 0 0 34.5px;
+  padding: 0 10px 0 10px;
   vertical-align: middle;
   height: 45px;
   line-height: 45px;
+  min-width: 34px
 }
 
 #topmenu a {
@@ -178,6 +139,10 @@ body {
   vertical-align: bottom;
   border: none;
   height: auto;
+}
+
+#topmenu #language_picker {
+   padding: 0 30px;
 }
 
 .box,
@@ -202,25 +167,29 @@ body {
   .container {
     max-width: $teenwidth;
     width: unset;
-    padding-left: 10px;
-    padding-right: 10px;
+    //padding-left: 13px;
+    //padding-right: 13px;
   }
 }
 @media (min-width: $mamabreak) {
   .container {
     max-width: $mamawidth;
     width: unset;
-    padding-left: 10px;
-    padding-right: 10px;
+    //padding-left: 13px;
+    //padding-right: 13px;
   }
 }
 @media (min-width: $papabreak) {
   .container {
     max-width: $papawidth;
     width: unset;
-    padding-left: 10px;
-    padding-right: 10px;
+    //padding-left: 13px;
+    //padding-right: 13px;
   }
+}
+.container {
+  padding-left: 0;
+  padding-right: 0;
 }
 /* Main navigation
 ================================================== */
@@ -258,6 +227,8 @@ body {
     transition: all 0.3s ease;
     margin: 0;
     background: $navbg;
+
+
 
     ul.menu {
       margin: 0;
@@ -386,7 +357,7 @@ body {
 
           a {
             color: $lighttextcolor;
-            padding: 0 0 0 5%;
+            padding: 0 0 0 40px;
             border: 0 solid lighten($navbg, 15%);
 
             &:before {
@@ -432,6 +403,8 @@ body {
         }
       }
     }
+
+
   }
   /* Mobile topbar
   ======================= */
@@ -544,14 +517,14 @@ body {
 
   #main-nav-check:checked~.mobile-nav.headericons {
     border-top: 1px solid darken($navbg, 5%);
-    padding: 1em 0 0;
+    padding: 1em 0 0 0;
     transition: all 0.2s ease;
   }
 }
 
 .mapbg {
   text-align: center;
-  margin: 0 0 1em;
+  margin: 0 0 1em 0;
 }
 
 .flexbox {
@@ -806,82 +779,22 @@ div.search-input-group {
 }
 
 #header-container {
-  body,
-  button,
-  input,
-  select,
-  textarea {
-    color: #3d3d3d;
-    word-wrap: break-word;
-    font: 14px/1.8 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  }
 
-  body {
-    background: #FFF;
-    margin: 0;
-    padding: 0;
-  }
-
-  #body-core {
-    background: #fff;
-    min-width: 320px;
-    overflow: hidde n;
-  }
-
-  #content-core,
-  #footer-core,
-  #header-core,
-  #intro-core,
-  #introaction-core,
-  #notification-core,
-  #outroaction-core,
-  #pre-header-core,
-  #sub-footer-close,
-  #sub-footer-core,
-  #sub-footer-widgets {
+  #header-core
+  {
     display: block;
     max-width: 1140px;
     margin: 0 auto;
   }
 
-  #nav-above,
-  #nav-below {
-    padding: 20px 0 60px;
-  }
-
-  .nav-next,
-  .nav-previous {
-    float: left;
-    margin-right: 10px;
-  }
-
-  .nav-next a,
-  .nav-previous a {
-    float: left;
-  }
-
-  .nav-next a .meta-ico n,
-  .nav-previous a .meta-icon {
-    display: table;
-    float: left;
-    height: 43px;
-    width: 43px;
-  }
-
-  .nav-next i,
-  .nav-previous i {
-    vertical-align: middle !important;
-    display: table-cell;
-  }
-
   #logo {
     float: left;
-    margin-top: 20px;
+    margin-top: 21px;
     transition: all 0.3s ease;
   }
 
   #logo img {
-    width: au to;
+    width: auto;
     max-height: 85px;
     vertical-align: middle;
     border: 0;
@@ -899,26 +812,66 @@ div.search-input-group {
     display: block;
   }
 
-  #header-links-inner {
-    display: tab le;
-    float: right;
-  }
-
   .main-navigation ul {
     list-style: none;
     margin: 0;
     padding-left: 0;
   }
 
-    #header-links-inner>.menu,
-    #header-search {
-      display: table-cell;
-      vertical-align: middle;
-      padding: 4em 0 0 1em;
-    }
+  #header .header-links {
+    display: table;
+    float: right;
+  }
 
-  #header .header-links li {
+  #header .menu {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 4em 0 0 1em;
+  }
+
+  #header .menu li {
     float: left;
+  }
+
+  #header .menu > li {
+    font-size: 14px;
+    color: #bebebe;
+    padding: 0 0 1em 0;
+  }
+
+  #header .menu > li:not(.last){
+    margin: 0 2em 0 0;
+  }
+
+  #header .menu > li a {
+    text-decoration: none;
+    color: #0a0a0a;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 31px;
+    transition: all 0.3s ease;
+  }
+
+  #header .menu>li.menu-item-has-children>a span:after {
+    content: '\f107';
+    font-family: fontawesome;
+    font-weight: normal;
+    display: inline-block;
+    margin: -2px 0 0 6px;
+    vertical-align: baseline;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    transform: rotate(0);
+    color: inherit;
+    position: relative;
+    background: transparent;
+    height: 16px;
+    width: 14px;
+    right: auto;
+    line-height: inherit;
+    font-size: 17px;
   }
 
   #header .sub-menu {
@@ -930,80 +883,31 @@ div.search-input-group {
     border: 1px solid #E1E1E1;
   }
 
-  #mobile-nav ul.sub-menu li a {
-    padding-left: 40px;
+  #header .sub-menu li {
+    padding: 0 20px;
   }
 
-  #header .menu > li > a:hover,
-  #header .menu > li.current-menu-ancestor > a,
-  #header .menu > li.current-menu-item > a,
-  #header .menu > li.menu-hover > a,
-  #header- sticky .menu > li.current-menu-item > a,
-  #header-sticky .menu > li > a:hover,
-  #header-sticky .menu > li.current-menu-ancestor > a,
-  #header-sticky .menu > li.menu-hover > a {
-    color: $navbg;
-    background: #FFF;
+  #header .sub-menu a {
+    line-height: 32px;
+    min-width: 100px;
+    margin: 0;
+    padding: 5px 10px;
+    display: block;
   }
 
-  #header .header-links > ul > li {
-    font-size: 13px;
-    color: #bebebe;
-    padding: 0 0 1em;
-    margin: 0 2em 0 0;
+  #header .sub-menu li,
+  #pre-header .sub-menu li {
+    position: relative;
   }
 
-  #header .menu > li > a {
-    transition: all 0.3s ease;
-  }
-
+  #header .menu > li > a span,
+  #header .sub-menu > li > a span,
   #header .menu > li.current-menu-item > a span {
-    color: $navbg;
+    //color: #58595b;
     font-weight: 400;
   }
 
-    #header .header-links>ul>li{
-      font-size: 13px;
-      color: #bebebe;
-      padding: 0 0 1em 0;
-    }
-
-    #header .header-links>ul>li:not(.last){
-      margin: 0 2.3em 0 0;
-    }
-
-    #header .menu>li>a {
-      transition: all .3s ease
-    }
-
-  #header .header-l inks > ul > li.menu-parent > a::after {
-    position: relative;
-    content: "\f107";
-    font-family: fontawesome;
-    padding-left: 6px;
-  }
-
-    #header .menu>li.menu-item-has-children>a span:after {
-      content: '\f107';
-      font-family: fontawesome;
-      font-weight: normal;
-      display: inline-block;
-      margin: -2px 0 0 6px;
-      vertical-align: baseline;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      transform: rotate(0);
-      color: inherit;
-      position: relative;
-      background: transparent;
-      height: 16px;
-      width: auto;
-      right: auto;
-      line-height: inherit;
-      font-size: 18px;
-    }
-
-  #header .header-links .sub-menu {
+  #header .menu .sub-menu {
     display: none;
     float: left;
     position: absolute;
@@ -1014,68 +918,58 @@ div.search-input-group {
     margin-top: 5px;
   }
 
-  #header .header-links .subshow {
+  #header .menu .subshow {
     display: block;
     visibility: visible;
   }
 
-  #header .header-links .subhide {
+  #header .menu .subhide {
     display: none;
     visibility: hidden;
   }
 
-  #header .header-links .sub-menu li {
+  #header .menu .sub-menu li {
     float: none;
-  }
-
-  #header .sub-menu li {
-    padding: 0 20px;
-  }
-
-  #header .sub-me nu li,
-  #pre-header .sub-menu li {
-    position: relative;
-  }
-
-  #header .menu > li > a span,
-  #header .sub-menu > li > a span {
-    font-weight: 400;
-  }
-
-  #header .header-links .sub-menu a {
-    color: #0a0a0a;
-    font-size: 13px;
-    line-height: 32px;
-    min-width: 100px;
-    margin: 0;
-    padding: 2px 10px;
-  }
-
-  #header .header-links > ul > li a {
-    text-decoration: none;
-    color: #0a0a0a;
-    font-family: Quicksand;
-    font-weight: 400;
-    font-size: 14px;
-    font-style: normal;
   }
 
   #header .menu > li > a::after {
     content: '';
     display: block;
     width: 0;
-    height: 2px;
+    height: 3px;
     background: $navbg;
-    transition: width 0.5s;
+    transition: width .5s;
+    margin-top: -3px;
+  }
+
+  #header .menu > li > a:hover,
+  #header .menu > li.current-menu-ancestor > a,
+  #header .menu > li.current-menu-item > a,
+  #header .menu > li.menu-hover > a {
+    color: $navbg;
+    background: #FFF;
   }
 
   #header .menu > li > a:hover::after,
   #header .menu > li.current_page_item > a::after {
-    width: 100%;
-  }
+     width: 100%;
+     //margin-top: -3px;
+   }
+
 }
 
 #footer {
+  background-color: $navbg;
+  background-repeat: no-repeat;
+  background-position: 111%;
+  color: #FFFFFF;
+  padding: 55px 10px 18px;
+
+  #footer-core {
+    padding: 0;
+    font-weight: 400;
+  }
+
   #mc_embed_signup .mc-field-group {
     margin-right: 1em;
   }
@@ -1084,40 +978,11 @@ div.search-input-group {
     width: auto;
   }
 
-    #header .header-links>ul>li a {
-      text-decoration: none;
-      color: #0a0a0a;
-      //font-family: Quicksand;
-      font-family: inherit;
-      font-weight: 400;
-      font-size: 14px;
-      font-style: normal;
-      line-height: 2em;
-      height: 2em;
-    }
-
-    #header .menu>li>a::after {
-      content: '';
-      display: block;
-      width: 0;
-      height: 3px;
-      background: $navbg;
-      transition: width .5s
-    }
-
-    #header .menu>li>a:hover::after,
-    #header .menu>li.current_page_item>a::after {
-       width: 100%;
-       margin-top: -3px;
-     }
-
   .subcribe_container {
     display: flex;
     width: 28em;
     margin-top: 1em;
   }
-
-  @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400);
 
   input.subscribe:hover {
     color: #115172;
@@ -1135,16 +1000,6 @@ div.search-input-group {
     display: inline-block;
     font-size: 20px;
     margin-bottom: 35px;
-    font-weight: 400;
-  }
-
-  #footer {
-    color: #FFFFFF;
-    padding: 55px 10px 18px;
-  }
-
-  #footer-core {
-    padding: 0;
     font-weight: 400;
   }
 
@@ -1194,7 +1049,7 @@ div.search-input-group {
   .one_third {
       width: 31.6%;
   }
-  
+
   .one_half {
     width: 48.7%;
   }
@@ -1235,4 +1090,4 @@ div.search-input-group {
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-@import url(//fonts.googleapis.com/css?family=Quicksand:300,400,600,700|);
+@import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:400);
