adjust main menu 15px to right to line up with main content. .row has a -15px margin on both sides

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -783,7 +783,7 @@ div.search-input-group {
   #header-core
   {
     display: block;
-    max-width: 1140px;
+    max-width: 1170px; // increased from 1140 to acount for row maring of -15px left and right
     margin: 0 auto;
   }
 
