--- a/ckanext/cioos_theme/templates/package/snippets/package_citation.html
+++ b/ckanext/cioos_theme/templates/package/snippets/package_citation.html
@@ -79,10 +79,19 @@ Renders a citation for a package
       line-height: 20px;
       padding: 3px 12px;
   }
+  button.dropdown-item:hover {
+      background-color: #f5f5f5;
+  }
+  button.dropdown-item {
+      background-color: inherit;
+      border: none;
+      width: 100%;
+      text-align: left;
+  }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/citation-js@0.4.0-8" type="text/javascript"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js" type="text/javascript"></script>
+  <script src="{{h.url_for_static('/js/citation.min.js')}}" type="text/javascript"></script>
+  <script src="{{h.url_for_static('/js/FileSaver.min.js')}}" type="text/javascript"></script>
 
   <script>
     const Cite = require('citation-js');
