add required field indicator

--- a/ckanext/cioos_theme/templates/schemamap.html
+++ b/ckanext/cioos_theme/templates/schemamap.html
@@ -21,23 +21,26 @@
   </article>
 
   <style>
-    tr.child1 i{
+    #schemamap table{
+      font-family: Helvetica,Arial;
+    }
+    #schemamap tr.child1 i{
       margin-left: 10px;
       margin-right: 5px;
     }
-    tr.child2 i{
+    #schemamap tr.child2 i{
       margin-left: 20px;
       margin-right: 5px;
     }
-    tr.child3 i{
+    #schemamap tr.child3 i{
       margin-left: 30px;
       margin-right: 5px;
     }
-    tr.child4 i{
+    #schemamap tr.child4 i{
       margin-left: 40px;
       margin-right: 5px;
     }
-    td span.required{
+    #schemamap td span.required{
       font-weight: bold;
       color: darkred;
     }
