--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -64,7 +64,7 @@
   <div id="header" class="nav main-nav">
     <div id="header-core">
       <div id="logo">
-        <a rel="home" href="{{ g.site_home_url }}"><img src="{{ logo_url }}" alt="CIOOS Atlantic"></a>
+        <a rel="home" href="{{ g.site_home_url }}"><img src="{{ logo_url }}" alt="Logo"></a>
       </div>
       <div id="header-links" class="main-navigation">
         <div id="header-links-inner" class="header-links">
