Re-added cioosatlantic-master changes back to branch after merge. Need to rebuild cioos_theme.css.map to be aligned with atlantic css.

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1092,4 +1092,6 @@ div.search-input-group {
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+
+@import 'cioos_atlantic.scss';
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:400);
