--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -67,7 +67,7 @@
     <div id="header-core">
       <div id="logo">
         {% block header_logo %}
-        <a rel="home" href="{{ g.site_home_url }}"><img src="{{ logo_url }}" alt="Logo"></a>
+        <a rel="home" href="{{ g.site_home_url }}"><img src="{{ logo_url }}" alt="CIOOS Atlantic"></a>
         {% endblock %}
       </div>
       <div id="header-links" class="main-navigation">
