add eov_icon_base_path config setting  to admin page

--- a/ckanext/cioos_theme/templates/admin/config.html
+++ b/ckanext/cioos_theme/templates/admin/config.html
@@ -35,6 +35,8 @@
 
       {{ form.input('ckan.exclude_eov', id='field-ckan-exclude-eov', label=_('Exlcude individul eov\'s'), value=data['ckan.exclude_eov'], error=error) }}
 
+      {{ form.input('ckan.eov_icon_base_path', id='field-ckan-eov-icon-base-path', label=_('EOV Icon Base Path'), value=data['ckan.eov_icon_base_path'], error=error) }}
+
       {{ form.input('ckan.header_file_name', id='field-ckan-header-file-name', label=_('Custom header filename'), value=data['ckan.header_file_name'], error=error) }}
 
       {{ form.input('ckan.footer_file_name', id='field-ckan-footer-file-name', label=_('Custom footer filename'), value=data['ckan.footer_file_name'], error=error) }}
