--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1092,4 +1092,10 @@ div.search-input-group {
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+
+i.fa.translation_icon {
+    font-size: large;
+    color: #585858;
+}
+
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:400);
