--- a/ckanext/cioos_theme/templates/package/snippets/package_citation.html
+++ b/ckanext/cioos_theme/templates/package/snippets/package_citation.html
@@ -70,26 +70,6 @@ Renders a citation for a package
   </section>
 
 
-  <style>
-  .btn-secondary {
-      /* background-color: lightgrey; */
-      border-color: #333333;
-      color: #333333;
-      height: 28px;
-      line-height: 20px;
-      padding: 3px 12px;
-  }
-  button.dropdown-item:hover {
-      background-color: #f5f5f5;
-  }
-  button.dropdown-item {
-      background-color: inherit;
-      border: none;
-      width: 100%;
-      text-align: left;
-  }
-  </style>
-
   <script src="{{h.url_for_static('/js/citation.min.js')}}" type="text/javascript"></script>
   <script src="{{h.url_for_static('/js/FileSaver.min.js')}}" type="text/javascript"></script>
 
@@ -97,7 +77,8 @@ Renders a citation for a package
     const Cite = require('citation-js');
 
     async function loadCite(template_style = 'apa', output_type = 'html', cite_format = 'bibliography', download = false){
-      let cite_data = await Cite.async("{{ h.scheming_language_text(pkg_dict.get('citation')) }}")
+      let pkg_citation = '{{ h.scheming_language_text(pkg_dict.get('citation'))|replace('\n','')|replace('\r','') }}'
+      let cite_data = await Cite.async(pkg_citation)
 
       let output = cite_data.format(cite_format, {
         format: output_type,
@@ -111,7 +92,6 @@ Renders a citation for a package
         var blob = new Blob([output], {type: "text/plain;charset=utf-8"});
         saveAs(blob, cite_format + ".txt");
       }
-      console.log(output);
     }
     var cite_template = 'apa';
     loadCite();
