--- a/ckanext/cioos_theme/templates/scheming/package/read.html
+++ b/ckanext/cioos_theme/templates/scheming/package/read.html
@@ -14,18 +14,14 @@
     <div class="notes embedded-content">
       {{ h.render_markdown(h.get_translated(pkg, 'notes'))[:-4] }} {# remove trailing </p> #}
 
-      {% set notes_translation_method = h.cioos_load_json( h.get_pkg_dict_extra(c.pkg_dict, 'notes_translation_method') or c.pkg_dict.get('notes_translation_method') or '{}' )%}
-      {% set nmethod = notes_translation_method.get(h.lang()) %}
-      {% if nmethod %}
-        <span class="translation_icon_group" title="{{ nmethod }}">
+      {% set notes_translation_method = h.cioos_load_json( h.get_pkg_dict_extra(pkg, 'notes_translation_method') or pkg.get('notes_translation_method') or '{}' ) %}
+      {% set default_local = pkg.get('metadata-language') %}
+      {% if notes_translation_method and default_local and default_local != h.lang() %}
+        <span class="translation_icon_group" title="{{ notes_translation_method }}">
           <i class="fa fa-language translation_icon" aria-hidden="true"></i>
-          {% if nmethod == 'Automatic Translation' %}
-            <i class="fa fa-desktop translation_icon" aria-hidden="true"></i>
-          {% else %}
-            <i class="fa fa-user translation_icon" aria-hidden="true"></i>
-          {% endif%}
         </span>
-      {% endif%}
+      {% endif %}
+      
       </p>
     </div>
   {% endif %}
